fix: pokeCard were overflowing

--- a/src/app/(routes)/globals.css
+++ b/src/app/(routes)/globals.css
@@ -34,6 +34,7 @@ body {
 }
 
 .pokeCard {
+    box-sizing: border-box;
     height: fit-content;
     width: fit-content;
     background-color: rgb(48, 42, 38);
